<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Bike Power</string>
    <string name="settings_activity_label">Settings</string>
    <string name="statistics_activity_label">Statistics</string>
    <string name="button_run_start">Start run</string>
    <string name="button_run_stop">Stop run</string>
    <string name="menu_settings_label">Settings</string>
    <string name="menu_statistics_label">User Statistics</string>
    <string name="pref_user_statistics_label">Statistics</string>
    <string name="pref_user_mass_default">80</string>
    <string name="pref_user_mass_key" translatable="false">user_mass_key</string>
    <string name="pref_user_mass_label">Rider weight</string>
    <string name="pref_bike_mass_default">8</string>
    <string name="pref_bike_mass_key" translatable="false">bike_mass_key</string>
    <string name="pref_bike_mass_label">Bike weight</string>
    <string name="pref_user_frontal_area_default">0.509</string>
    <string name="pref_user_frontal_area_key" translatable="false">user_frontal_area_key</string>
    <string name="pref_user_frontal_area_label">Frontal Area</string>
    <string name="pref_drag_coefficient_default">0.63</string>
    <string name="pref_drag_coefficient_key" translatable="false">drag_coefficient_key</string>
    <string name="pref_drag_coefficient_label">Drag Coefficient</string>
    <!-- Temperature format in Celsius [CHAR LIMIT=5] -->
    <string name="format_temperature_celsius">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0C
    </string>

    <!-- Temperature format in Fahrenheit [CHAR LIMIT=5] -->
    <string name="format_temperature_fahrenheit">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0F
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- For labelling today's forecast [CHAR LIMIT=15] -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
